@@ -3,6 +3,7 @@ Auto IRC Bot 3.0: Change Log
 
 3.0 Indev
 ==================================================================
+    * Added a Badwords module.
     * Added kick() to API::IRC.
     * Added DBI and DBD::SQLite to core dependencies.
     * Added on_connect hook, triggered after we receive 001.
